# math_multiplication_trainer

./: .gitignore  Cargo.toml  README.md
src/: average_time.rs  main.rs  theme.rs
src/resources/: icon.rgba
