[package]
name = "math_multiplication_trainer"
version = "0.3.1"
edition = "2021"
authors = ["EvgenHi"]
readme = "README.md"
repository = "https://github.com/EvgenHi/math_multiplication_trainer"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.19.*"
rand = "0.8.*"
soloud = "1.*.*"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
